--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,12 @@ on:
   push:
     branches: ["main"]
     tags: ["v*"]
+  workflow_dispatch:
+    inputs:
+      publishSnapshot:
+        description: "Publish Snapshot"
+        required: false
+        default: "false"
 
 concurrency:
   group: ci-${{ github.ref }}
@@ -63,7 +69,8 @@ jobs:
           ./scripts/check-dirty.sh
 
       - name: Publish ${{ github.ref }}
-        if: startsWith(github.ref, 'refs/tags/v')
+        if: startsWith(github.ref, 'refs/tags/v') ||
+          (github.event_name == 'workflow_dispatch' && github.event.inputs.publishSnapshot == 'true')
         run: mill -i io.kipp.mill.ci.release.ReleaseModule/publishAll
         env:
           PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
