set empty passphrase

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Setup Java
         uses: actions/setup-java@v2
         with:
-            distribution: adopt
-            java-version: 11
+          distribution: adopt
+          java-version: 11
 
       - name: Get mill version
         run: echo "MILL_VERSION=$(cat .mill-version)" >> $GITHUB_ENV
@@ -73,7 +73,7 @@ jobs:
           (github.event_name == 'workflow_dispatch' && github.event.inputs.publishSnapshot == 'true')
         run: mill -i io.kipp.mill.ci.release.ReleaseModule/publishAll
         env:
-          PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
+          PGP_PASSPHRASE: ""
           PGP_SECRET: ${{ secrets.PGP_SECRET }}
           SONATYPE_PASSWORD: ${{ secrets.S01_SONATYPE_PASSWORD }}
           SONATYPE_USERNAME: ${{ secrets.S01_SONATYPE_USERNAME }}
