remove pgp passphrase

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,7 @@ jobs:
           (github.event_name == 'workflow_dispatch' && github.event.inputs.publishSnapshot == 'true')
         run: mill -i io.kipp.mill.ci.release.ReleaseModule/publishAll
         env:
-          PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
+          PGP_PASSPHRASE: ""
           PGP_SECRET: ${{ secrets.PGP_SECRET }}
           SONATYPE_PASSWORD: ${{ secrets.S01_SONATYPE_PASSWORD }}
           SONATYPE_USERNAME: ${{ secrets.S01_SONATYPE_USERNAME }}
