--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,7 +71,7 @@ jobs:
       - name: Publish ${{ github.ref }}
         if: startsWith(github.ref, 'refs/tags/v') ||
           (github.event_name == 'workflow_dispatch' && github.event.inputs.publishSnapshot == 'true')
-        run: mill -i io.kipp.mill.ci.release.ReleaseModule/publishAll
+        run: mill -i InternalReleaseModule.publishAll
         env:
           PGP_PASSPHRASE: ""
           PGP_SECRET: ${{ secrets.PGP_SECRET }}
