Add MiMa plugin and enable in modules that are published

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,6 +52,10 @@ jobs:
           ./mill -k --disable-ticker cli.run json-schema-to-smithy --input modules/json-schema/fullTests/testInputs modules/json-schema/fullTests/testOutputs
           ./mill -k --disable-ticker proto-examples.compileScalaPB # trigger smithy-to-proto run
 
+      - name: Run MiMa checks
+        run: |
+          ./mill -k --disable-ticker __.mimaReportBinaryIssues
+
       - name: Validate README.md
         run: ./mill -k --disable-ticker readme-validator.validate
 
